src/themes/default/src/scss/_header.scss
// header
$header-background: #004494 !default;
$header-background-start: #039 !default;
$header-background-end: #1b4ac3 !default;
$header-link-active-background: #003776 !default;
$header-margin: 1.5rem 0 !default;

.bcl-header {
  margin: $header-margin;
}

.bcl-header__project,
.bcl-header__navbar {
  background: linear-gradient(
    90deg,
    $header-background-start 0%,
    $header-background-end 100%
  );
}

.ec__header .bcl-header__project,
.ec__header .bcl-header__navbar {
  background: $header-background;
}

.bcl-navbar-header {
  align-items: flex-end;
}

.bcl-header.ec__header .nav-link {
  color: $ec-blue;
}

.bcl-header .nav-link {
  color: $eu-blue;
}

.bcl-header__navbar .navbar-nav .nav-link {
  color: $gray-400;
}

.bcl-header__navbar .navbar-nav .nav-link:focus,
.bcl-header__navbar .navbar-nav .nav-link:hover,
.bcl-header__navbar .navbar-nav .nav-link.active {
  color: #fff;
}

.bcl-header__navbar input:active,
.bcl-header__navbar input:focus {
  box-shadow: 0 0 0 0.25rem hsl(210deg 2% 83% / 50%);
}

.bcl-header .notification {
  position: relative;
  padding-right: 0;
}

.bcl-header .navbar-brand img {
  width: 100px;
}

.bcl-header .notification span {
  z-index: 1;
  height: 18px;
  padding-right: 5px;
  padding-left: 5px;
  line-height: 0.6rem;
  border-radius: 10px;
  transform: translate(-11px, 5px);
}

.bcl-header__project {
  padding-top: map-get($spacers, 3);
}

.bcl-header__project p {
  display: inline-block;
  margin-bottom: 0;
  font-size: 1.3rem;
  font-weight: 300;
  color: $white;
  vertical-align: middle;
}

.bcl-header__project.light p {
  color: $black;
}

.bcl-header .navbar-toggler {
  position: absolute;
  right: 14px;
  bottom: calc(100% - 0.3rem);
  border-color: $white;
}

.bcl-header .navbar-toggler .navbar-toggler-icon {
  background: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

@include media-breakpoint-up(md) {
  .ec__header .navbar-brand img {
    width: 180px;
  }
}

@include media-breakpoint-up(lg) {
  .bcl-header__project.light,
  .ec__header .bcl-header__project.light {
    background: $white;
  }
  .bcl-header .navbar-toggler {
    position: relative;
    right: 0;
    bottom: 0;
  }
  .bcl-header .navbar-brand img {
    width: auto;
  }
  .bcl-header__navbar .nav-link.active {
    padding-top: $spacer;
    padding-bottom: $spacer;
    margin-top: -#{map-get($spacers, 2)};
    margin-bottom: -#{map-get($spacers, 2)};
  }
  .bcl-header__navbar .dropdown-menu {
    z-index: 1050; // Make sure dropdown overlaps the search offcanvas
  }
  .bcl-header__project {
    padding-bottom: map-get($spacers, 3);
  }
  .bcl-header__project p {
    padding-left: map-get($spacers, 4);
    font-weight: 500;
  }

  .ec__header .navbar-brand img {
    width: 285px;
  }
}

// language list
$language-background: $header-background !default;
$language-color: #fff !default;
$language-list-gap: map-get($spacers, 2) !default;
$language-item-background: #fff !default;
$language-item-color: $header-background !default;
$language-item-background-hover: #ffd617 !default;
$language-item-color-hover: $dark !default;

.bcl-language .modal-content {
  color: $language-color;
  background-color: $language-background;
}

.bcl-language__list {
  display: grid;
  gap: $language-list-gap;
  margin-bottom: map-get($spacers, 4);
}

.bcl-language__title {
  margin-bottom: map-get($spacers, 4);
}

.bcl-language__item {
  padding: map-get($spacers, 2) $spacer;
  font-weight: $font-weight-bold;
  color: $language-item-color;
  text-decoration: none; //should be handled at link level
  background-color: $language-item-background;

  &:hover,
  &:focus {
    color: $language-item-color-hover;
    text-decoration: underline;
    background-color: $language-item-background-hover;
  }
}

.bcl-language .modal-body {
  padding-top: map-get($spacers, 5);
  padding-bottom: map-get($spacers, 5);
}

.bcl-language .btn-close {
  filter: $btn-close-white-filter;
}

